# Text2Humanoid

./: .gitignore  README.md  pyproject.toml  重构.md
apps/: api_server.py  app_stop.py  demo_console_server.py  diagnose_263_to_mte.py  export_debug_bundle.py  launch_full_demo.py  launch_session.py  replay_bfmzero_chunk.py  replay_bfmzero_reference.py  replay_reference.py  replay_trajectory.py  retarget_motion.py  retarget_to_bfmzero.py  run_text_to_bfmzero.py
configs/floodnet/: planner.yaml
configs/nmr/: retarget.yaml
configs/runtime/: motion_tracking.yaml
configs/system/: debug_replay.yaml  demo_fixed.yaml  demo_socket.yaml  local_dev.yaml  sim2sim_single_gpu.yaml
patches/motion_tracking/: expected_runtime_patch.md  floodnet_source_spec.md
src/text2humanoid/: interfaces.py
src/text2humanoid/api/: __init__.py  (+3 more)
tests/: test_bridge_263_to_140.py  test_contracts.py  test_crossfade_fk.py  test_demo_configs.py  test_demo_smoke.py  test_end_to_end_replay.py  test_floodnet_source.py  test_joint_mapping.py  test_nmr_service.py  test_paths.py  test_planner_stream.py  test_reference_adapter.py  test_reference_buffer.py  test_replay_bundle.py  test_runtime_backend.py  test_socket_bridge.py  test_trajectory.py  test_trajectory_source.py  test_transition.py
tools/: __init__.py  visualize_140D.py  visualize_263D.py  visualize_retarget.py
tools/conversion/: __init__.py  retarget_motion.py  retarget_to_bfmzero.py
tools/diagnostics/: __init__.py  diagnose_263_to_mte.py
tools/replay/: __init__.py  replay_bfmzero_chunk.py  replay_reference.py  replay_trajectory.py
(+59 files in other folders)
